fix content jumping around on initial load

--- a/components/Table/Table.module.scss
+++ b/components/Table/Table.module.scss
@@ -14,6 +14,10 @@
     width: 100%;
     font-size: 34px;
     line-height: 62px;
+
+    @media (min-width: 768px) {
+      width: calc(100% - 298px);
+    }
   }
 
   thead {
